src/test/resources/public/input/typechecking/fail/incorrect_operand/fail02.jova
class Test{

}

class Main {

  public int main() {
    bool b;
    
    b = !"false";
    return 0;
  }

}